--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./index.css" />
-    <script src="./index.js" defer></script>
-    <script src="./modal.js" defer></script>
+
+    <script src="./jquery.module.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
+    <script src="./modal.js" type="module"></script>
     <title>vanilla-search-form-task</title>
   </head>
   <body>
